[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dale-dsa"
version = "0.1.0"
authors = [
  { name="Laurence Dale", email="laurencedale1986@gmail.com" },
]
description = "A collection of my data structures and algorithms functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lightraine2/dale-dsa"
"Bug Tracker" = "https://github.com/lightraine2/dale-dsa/issues"